// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OpenAPI 3.0 — exclusiveMinimum / exclusiveMaximum > generates correct type for exclusive bounds on object property 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export type Config = { priority: number; };

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;

exports[`OpenAPI 3.0 — exclusiveMinimum / exclusiveMaximum > generates nullable number with exclusive bounds 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export type NullableBounded = number | null;

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;

exports[`OpenAPI 3.0 — exclusiveMinimum / exclusiveMaximum > generates number type for exclusiveMaximum: true with maximum 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export type BoundedMax = number;

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;

exports[`OpenAPI 3.0 — exclusiveMinimum / exclusiveMaximum > generates number type for exclusiveMinimum: true with minimum 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export type BoundedMin = number;

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;

exports[`OpenAPI 3.0 — exclusiveMinimum / exclusiveMaximum > generates number type when both exclusiveMinimum and exclusiveMaximum are set 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export type BothBounded = number;

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;

exports[`OpenAPI 3.0 — exclusiveMinimum / exclusiveMaximum > generates number type when exclusiveMinimum is false 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export type NonExclusive = number;

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;

exports[`OpenAPI 3.0 — exclusiveMinimum / exclusiveMaximum > generates number type without exclusiveMinimum/Maximum 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export type PlainNumber = number;

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;
